/* 
  Copyright (c) 2025 SyntectAI
  Licensed under the CC BY-NC-SA 4.0 International License.
*/
syntax = "proto3";

package agentflow; 

service AgentFlowService {
  rpc StartCodeReview(CodeReviewRequest) returns (CodeReviewResponse);
}

message CodeReviewRequest {
  string webhookSignature = 1;
  string webhookPayload = 2;
  string githubToken = 3;
}

message CodeReviewResponse {
  bool success = 1;
}
